增加指定堆内存大小笔记